<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gas Mileage Journal</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Statistics</string>
    <string name="title_section2">Fill Ups</string>
    <string name="title_section3">Cars</string>
    <string name="title_section4">Maintenance Logs</string>
    <string name="detailed_car_form_car_name">Choose a Car:</string>
    <string name="add_new_fill_up">Add new Fill Up</string>
    <string name="add_new_car">Add new Car</string>
    <string name="car_nickname">Car Nickname</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="odometer">Odometer</string>
    <string name="comments">Comments</string>
    <string name="save_">Save!</string>
    <string name="create_a_new_car">Create a New Car!</string>
    <string name="miles_traveled">Miles Traveled</string>
    <string name="gallons_purchased">Gallons Purchased</string>
    <string name="price_per_gallon">Price per Gallon</string>
    <string name="date">Date</string>
    <string name="add_fill_up">Add Fill Up</string>
    <string name="add_a_fill_up">Add a Fill Up!</string>
    <string name="description">Description</string>
    <string name="example_application">Example application</string>
    <string name="todo">TODO</string>
    <string name="add_a_picture_of_receipt">Add a picture of the receipt!</string>
    <string name="preference_file_key">com.orangegames.gas.mileage.journal</string>
    <string name="measurement">measurement</string>
    <string name="date_format">date_format</string>
    <string name="currency">currency</string>
    <string name="dialog_title">Rate %s</string>
    <string name="rate_message">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate">Rate Now</string>
    <string name="later">Later</string>
    <string name="no_thanks">No thanks</string>

</resources>

