<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailed_car_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detailed_car_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/create_a_new_car"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/detailed_car_form_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:hint="@string/car_nickname"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/detailed_car_form_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:hint="@string/car_make"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/detailed_car_form_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/car_model"
            android:inputType="textPersonName" >
        </EditText>

        <Spinner
            android:id="@+id/detailed_car_form_year"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center_vertical"
            android:prompt="@string/detailed_car_form_car_name" >
        </Spinner>

        <EditText
            android:id="@+id/detailed_car_form_odometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:hint="@string/odometer"
            android:inputType="number" />

        <EditText
            android:id="@+id/detailed_car_form_comments"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/comments"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>

        <Button
            android:id="@+id/detailed_car_form_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="sendFeedback"
            android:text="@string/save_" >
        </Button>
    </LinearLayout>

</ScrollView>
